public class DeutscheBahn {

    public void vindReis() {
        System.out.println( "Trein geboekt bij deutsche bahn" );
    }
}
