public interface ITreinAdapter {

    void boekReis();
}
