@startuml
'https://plantuml.com/class-diagram
title Code Diagram Backend Adapter voor triptop

class TravelController{
    main(args: String): void
}
class TravelService{
    getRoute(treinNaam: String): void
}
class TreinAdapterFactory
{
    getTreinAdapter(treinNaam: String): ITreinAdapter
}
class Directions
{
   getRoute(): void
}
class DeutscheBahn
{
   getRoute(): void
}
interface ITreinAdapter{
   getRoute(): void
}
class DirectionsAdapter{

}
class DeutscheBahnAdapter{

}

BouwsteenController --> BouwsteenService
BouwsteenService --> ITreinAdapter
BouwsteenService ..> TreinAdapterFactory
DirectionsAdapter..|> ITreinAdapter
DeutscheBahnAdapter ..|> ITreinAdapter
DirectionsAdapter -->  "1 Directions" Directions
DeutscheBahnAdapter --> "1 deutschebahn"DeutscheBahn
TreinAdapterFactory ..> ITreinAdapter
@enduml